<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.mj</groupId>
	<artifactId>emu6502</artifactId>
	<version>0.0.7-SNAPSHOT</version>
	<name>SimpleCPUEmulator</name>
	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<threadCount>1</threadCount>
					<perCoreThreadCount>false</perCoreThreadCount>
					<parallel>classes</parallel>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
	 <scm>
		 <developerConnection>scm:git:git@github.com:jpoffy238/simpleCPU.git</developerConnection>
		 <connection>scm:git:git@github.com:jpoffy238/simpleCPU.git</connection>
		 <url>scm:git:git@github.com:jpoffy238/simpleCPU.git</url>
    <tag>0.0.6</tag>
  </scm>
	<build>
	<!--  <pluginManagement> -->
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-scm-plugin</artifactId>
				<version>1.11.2</version>
			</plugin>
			<plugin>
 			       <groupId>org.apache.maven.plugins</groupId>
			        <artifactId>maven-release-plugin</artifactId>
       			 <version>3.0.0-M1</version>
      			</plugin>
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>5.3.0</version>
				<configuration>
					<format>ALL</format>
					<archiveAnalyzerEnabled>true</archiveAnalyzerEnabled>
					<skipSystemScope>true</skipSystemScope>
					<failOnError>false</failOnError>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/libs
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
<plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <outputDirectory>${project.build.directory}</outputDirectory>
          <finalName>${project.name}-source</finalName>
          <attach>false</attach>
        </configuration>
      </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<archive>
								<manifestEntries>
									<Build-Jdk>${java.version} ${java.vendor} ${java.vm.version}</Build-Jdk>
									<Build-Timestamp>${git.build.time}</Build-Timestamp>
									<Build-Revision>${git.commit.id}</Build-Revision>
									<Build-OS>${os.name} ${os.arch} ${os.version}</Build-OS>
									<Build-Branch>${git.branch}</Build-Branch>
									<Build-Version>${git.build.version}</Build-Version>
									<Build-closest-Tag>${git.tags}</Build-closest-Tag>
									<Build-commit-Count>${git.total.commit.count}</Build-commit-Count>
									<Build-IsDirty>${git.dirty}</Build-IsDirty>
									<Build-Number>${git.build.number}</Build-Number>
								</manifestEntries>
								<manifest>
									<mainClass>
										com.mj.cpu001.CPUMain
									</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>4.0.0</version>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.openclover</groupId>
				<artifactId>clover-maven-plugin</artifactId>
				<version>4.4.1</version>
				<configuration>
					<generateXml>true</generateXml>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>

					<execution>
						<id>asm</id>
						<phase>compile</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>/usr/bin/make</executable>
							<workingDirectory>${basedir}/src/main/asm</workingDirectory>
							<arguments>
								<argument>clean</argument>
								<argument>install</argument>
							</arguments>
						</configuration>
					</execution>

				</executions>
			</plugin>

		</plugins>
<!-- 		 </pluginManagement> -->
	</build>
	<dependencies>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.17.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.1</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.4.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.4.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jline</groupId>
			<artifactId>jline</artifactId>
			<version>3.5.1</version>
		</dependency>
	</dependencies>
</project>
